--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,12 +7,11 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    {%- if page.title -%}
-      <h2 class="post-list-heading"><a href="{{ page.website_url }}">{{ page.title }}</a></h2>
+    {%- if page.list_title -%}
+      <h2 class="post-list-heading">{{ page.list_title }}</h2>
     {%- endif -%}
     <ul class="post-list">
-      {%- assign filtered_news = site.news | where: "source", page.title | sort: "date" | reverse -%}
-      {%- for post in filtered_news -%}
+      {%- for post in site.posts -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
@@ -28,7 +27,7 @@ layout: default
       {%- endfor -%}
     </ul>
 
-    <p class="rss-subscribe">subscribe <a href="{{ page.news_rss_url }}">via RSS</a></p>
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
 
 </div>
