--- a/_layouts/news_list.html
+++ b/_layouts/news_list.html
@@ -3,16 +3,19 @@ layout: default
 ---
 
 <div class="home">
+  {%- if page.title -%}
+    <h1 class="page-heading">{{ page.title }}</h1>
+  {%- endif -%}
 
   {{ content }}
 
-  {%- if site.posts.size > 0 -%}
-    {%- if page.title -%}
-      <h2 class="post-list-heading"><a href="{{ page.website_url }}">{{ page.title }}</a></h2>
+  {%- if site.news.size > 0 -%}
+    {%- if page.list_title -%}
+      <h2 class="post-list-heading">{{ page.list_title }}</h2>
     {%- endif -%}
     <ul class="post-list">
-      {%- assign filtered_news = site.news | where: "source", page.title | sort: "date" | reverse -%}
-      {%- for post in filtered_news -%}
+      {%- assign sorted_news = site.news | sort: "date" | reverse -%}
+      {%- for post in sorted_news -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
@@ -28,7 +31,6 @@ layout: default
       {%- endfor -%}
     </ul>
 
-    <p class="rss-subscribe">subscribe <a href="{{ page.news_rss_url }}">via RSS</a></p>
   {%- endif -%}
 
 </div>
